--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,10 @@
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Jura:400,700|Open+Sans:400,600,700&amp;subset=cyrillic" rel="stylesheet">
 		<!--/. Google Fonts -->
+		
+		<!-- Modernizr -->
+		<script src="js/modernizr-custom.js"></script>
+		<!--/. Modernizr -->
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="css/libs.min.css">
@@ -798,37 +802,98 @@
 			<div class="container">
 				<h2 class="sect-tech__title">Современные технологии - <span>залог вашего успеха!</span></h2>
 
-				<div class="tech-list">
+				<div class="tech-carousel" id="techSlider">
 
 					<!-- Technologies item #1 -->
 					<div class="tech-item">
-						<img src="img/brands/drupal.png" alt="Логотип Drupal">
+						<img src="img/brands/wordpress.png" alt="Логотип Wordpress">
 					</div>
 					<!--/. Technologies item #1 -->
 
 					<!-- Technologies item #2 -->
 					<div class="tech-item">
-						<img src="img/brands/wordpress.png" alt="Логотип Wordpress">
+						<img src="img/brands/joomla.png" alt="Логотип Joomla">
 					</div>
 					<!--/. Technologies item #2 -->
 
 					<!-- Technologies item #3 -->
 					<div class="tech-item">
-						<img src="img/brands/html5.png" alt="Логотип HTML5">
+						<img src="img/brands/drupal.png" alt="Логотип Drupal">
 					</div>
+
 					<!--/. Technologies item #3 -->
 
 					<!-- Technologies item #4 -->
 					<div class="tech-item">
-						<img src="img/brands/joomla.png" alt="Логотип Joomla">
+						<img src="img/brands/opencart.png" alt="Логотип Opencart">
 					</div>
 					<!--/. Technologies item #4 -->
 
 					<!-- Technologies item #5 -->
 					<div class="tech-item">
-						<img src="img/brands/opencart.png" alt="Логотип Opencart">
+						<img src="img/brands/html5.png" alt="Логотип HTML5">
 					</div>
 					<!--/. Technologies item #5 -->
+
+					<!-- Technologies item #6 -->
+					<div class="tech-item">
+						<img src="img/brands/css.png" alt="Логотип CSS3">
+					</div>
+					<!--/. Technologies item #6 -->
+
+					<!-- Technologies item #7 -->
+					<div class="tech-item">
+						<img src="img/brands/js.png" alt="Логотип JS">
+					</div>
+					<!--/. Technologies item #7 -->
+
+					<!-- Technologies item #8 -->
+					<div class="tech-item">
+						<img src="img/brands/php.png" alt="Логотип PHP">
+					</div>
+					<!--/. Technologies item #8 -->
+
+					<!-- Technologies item #9 -->
+					<div class="tech-item">
+						<img src="img/brands/bitrix.png" alt="Логотип Bitrix">
+					</div>
+					<!--/. Technologies item #9 -->
+
+					<!-- Technologies item #10 -->
+					<div class="tech-item">
+						<img src="img/brands/jquery.png" alt="Логотип JQUERY">
+					</div>
+					<!--/. Technologies item #10 -->
+
+					<!-- Technologies item #11 -->
+					<div class="tech-item">
+						<img src="img/brands/magento.png" alt="Логотип Magento">
+					</div>
+					<!--/. Technologies item #11 -->
+
+					<!-- Technologies item #12 -->
+					<div class="tech-item">
+						<img src="img/brands/mysql.png" alt="Логотип MySql">
+					</div>
+					<!--/. Technologies item #12 -->
+
+					<!-- Technologies item #13 -->
+					<div class="tech-item">
+						<img src="img/brands/api.png" alt="Логотип API">
+					</div>
+					<!--/. Technologies item #13 -->
+
+					<!-- Technologies item #14 -->
+					<div class="tech-item">
+						<img src="img/brands/webasyst.png" alt="Логотип Webasyst">
+					</div>
+					<!--/. Technologies item #14 -->
+
+					<!-- Technologies item #15 -->
+					<div class="tech-item">
+						<img src="img/brands/yii.png" alt="Логотип Yii Framework">
+					</div>
+					<!--/. Technologies item #15 -->
 
 				</div>
 
@@ -859,25 +924,27 @@
 				<div class="footer-contacts">
 
 					<div class="footer-contacts__info">
-						<div class="footer-contacts__phones">
-							<div class="footer-contacts__icon  footer-contacts__icon--phone">
+
+						<div class="footer-contacts__address">
+							<div class="footer-contacts__icon  footer-contacts__icon--address">
 								<svg version="1.1"
 								     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 								     x="0px" y="0px"
-								     viewBox="0 0 21.9 21.9"
+								     viewBox="0 0 65.3 87.9"
 								     xml:space="preserve"
-								     width="15" height="15"
+								     width="13" height="17"
 								     fill="#0093e5">
-									<path d="M20.9,15.9v3c0,1.1-0.9,2-2,2c-0.1,0-0.1,0-0.2,0c-3.1-0.3-6-1.4-8.6-3.1c-2.4-1.5-4.5-3.6-6-6
-										C2.4,9.2,1.3,6.3,1,3.2C0.9,2.1,1.7,1.1,2.8,1C2.9,1,2.9,1,3,1h3c1,0,1.9,0.7,2,1.7c0.1,1,0.4,1.9,0.7,2.8C9,6.3,8.8,7.1,8.2,7.6
-										L7,8.9c1.4,2.5,3.5,4.6,6,6l1.3-1.3c0.6-0.5,1.4-0.7,2.1-0.4c0.9,0.3,1.8,0.6,2.8,0.7C20.2,14,20.9,14.9,20.9,15.9z"></path>
+									<g>
+										<path d="M9.5,9.5c-10.9,11-12.7,28.1-4.2,41.1l23.1,35.1c1.5,2.3,4.6,2.9,6.9,1.4c0.6-0.4,1.1-0.9,1.4-1.4l23.1-35.1
+											c9.9-15.1,5.7-35.3-9.3-45.2C37.6-3.1,20.5-1.4,9.5,9.5z M54.9,47.3L32.6,81.1L10.4,47.3C2.3,35,5.7,18.5,18,10.4S46.8,5.7,54.9,18
+											C60.8,26.9,60.8,38.4,54.9,47.3z"></path>
+										<path d="M32.6,12.7c-10.9,0-19.7,8.8-19.7,19.7s8.8,19.7,19.7,19.7s19.7-8.8,19.7-19.7C52.3,21.5,43.5,12.7,32.6,12.7z M32.6,46.1
+											c-7.6,0-13.7-6.1-13.7-13.7c0-7.6,6.1-13.7,13.7-13.7s13.7,6.1,13.7,13.7c0,0,0,0,0,0C46.3,39.9,40.2,46,32.6,46.1z"></path>
+									</g>
 								</svg>
 							</div>
 
-							<div class="footer-contacts__phones-block">
-								<span class="footer-contacts__phone">+38 (044) 451 51 49</span>
-								<span class="footer-contacts__phone">+38 (093) 949 04 31</span>
-							</div>
+							<span class="footer-contacts__location">Киев  |  пр-т Н. Бажана, 36, офис 239</span>
 						</div>
 
 						<div class="footer-contacts__mail">
@@ -900,26 +967,25 @@
 							<a class="footer-contacts__mail-link" href="mailto:info@imkt.pro">info@imkt.pro</a>
 						</div>
 
-						<div class="footer-contacts__address">
-							<div class="footer-contacts__icon  footer-contacts__icon--address">
+						<div class="footer-contacts__phones">
+							<div class="footer-contacts__icon  footer-contacts__icon--phone">
 								<svg version="1.1"
 								     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 								     x="0px" y="0px"
-								     viewBox="0 0 65.3 87.9"
+								     viewBox="0 0 21.9 21.9"
 								     xml:space="preserve"
-								     width="13" height="17"
+								     width="15" height="15"
 								     fill="#0093e5">
-									<g>
-										<path d="M9.5,9.5c-10.9,11-12.7,28.1-4.2,41.1l23.1,35.1c1.5,2.3,4.6,2.9,6.9,1.4c0.6-0.4,1.1-0.9,1.4-1.4l23.1-35.1
-											c9.9-15.1,5.7-35.3-9.3-45.2C37.6-3.1,20.5-1.4,9.5,9.5z M54.9,47.3L32.6,81.1L10.4,47.3C2.3,35,5.7,18.5,18,10.4S46.8,5.7,54.9,18
-											C60.8,26.9,60.8,38.4,54.9,47.3z"></path>
-										<path d="M32.6,12.7c-10.9,0-19.7,8.8-19.7,19.7s8.8,19.7,19.7,19.7s19.7-8.8,19.7-19.7C52.3,21.5,43.5,12.7,32.6,12.7z M32.6,46.1
-											c-7.6,0-13.7-6.1-13.7-13.7c0-7.6,6.1-13.7,13.7-13.7s13.7,6.1,13.7,13.7c0,0,0,0,0,0C46.3,39.9,40.2,46,32.6,46.1z"></path>
-									</g>
+									<path d="M20.9,15.9v3c0,1.1-0.9,2-2,2c-0.1,0-0.1,0-0.2,0c-3.1-0.3-6-1.4-8.6-3.1c-2.4-1.5-4.5-3.6-6-6
+										C2.4,9.2,1.3,6.3,1,3.2C0.9,2.1,1.7,1.1,2.8,1C2.9,1,2.9,1,3,1h3c1,0,1.9,0.7,2,1.7c0.1,1,0.4,1.9,0.7,2.8C9,6.3,8.8,7.1,8.2,7.6
+										L7,8.9c1.4,2.5,3.5,4.6,6,6l1.3-1.3c0.6-0.5,1.4-0.7,2.1-0.4c0.9,0.3,1.8,0.6,2.8,0.7C20.2,14,20.9,14.9,20.9,15.9z"></path>
 								</svg>
 							</div>
 
-							<span class="footer-contacts__location">пр-т Н. Бажана, 36, офис 239</span>
+							<div class="footer-contacts__phones-block">
+								<span class="footer-contacts__phone">+38 (044) 451 51 49</span>
+								<span class="footer-contacts__phone">+38 (093) 949 04 31</span>
+							</div>
 						</div>
 
 						<div class="footer-contacts__welcome">
@@ -946,24 +1012,10 @@
 								</div>
 
 								<div class="contacts-form__control  contacts-form__control--button">
-									<button type="submit">ОТПРАВИТЬ</button>
+									<button type="submit"><span>ОТПРАВИТЬ</span></button>
 								</div>
 							</fieldset>
 						</form>
-					</div>
-
-					<div class="footer-contacts__socials">
-						<a class="footer-contacts__soc-icon" href="#">
-							<img src="img/icons/facebook.png" alt="Логотип Facebook">
-						</a>
-
-						<a class="footer-contacts__soc-icon" href="#">
-							<img src="img/icons/google-plus.png" alt="Логотип Google+">
-						</a>
-
-						<a class="footer-contacts__soc-icon" href="#">
-							<img src="img/icons/twitter.png" alt="Логотип Twitter">
-						</a>
 					</div>
 
 				</div>
@@ -971,7 +1023,7 @@
 			</div>
 
 			<div class="footer-copyrights">
-				<small>&copy; IMKT.Pro. All right reserved.</small>
+				<small>&copy; 2017 IMKT.Pro. All right reserved.</small>
 			</div>
 		</footer>
 		<!--/. MAIN FOOTER -->
