Added Favicon icon, media-queries SASS mixin. Beginning adaptive layout.

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,10 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<!--/. Meta tags -->
 
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="favicon.png" sizes="31x31" type="image/png">
+		<!--/. Favicon -->
+
 		<!-- Page title -->
 		<title>IMKT</title>
 		<!--/. Page title -->
@@ -28,8 +32,16 @@
 
 	<body>
 
+		<!-- Mobile sandwich -->
+		<a href="#" class="m-sandwich" id="mSandwich">
+			<span class="m-sandwich__top-line"></span>
+			<span class="m-sandwich__middle-line"></span>
+			<span class="m-sandwich__bottom-line"></span>
+		</a>
+		<!--/. Mobile sandwich -->
+
 		<!-- MAIN HEADER -->
-		<header class="main-header">
+		<header class="main-header" id="mHeader">
 			<div class="container">
 				<nav class="top-nav">
 
