Finish adaptive for tablet. Some fixes.

--- a/app/index.html
+++ b/app/index.html
@@ -80,7 +80,7 @@
 					<ul class="top-nav__list">
 						<li class="top-nav__item"><a class="top-nav__link" href="#services" rel="m_PageScroll2id">УСЛУГИ</a></li>
 						<li class="top-nav__item"><a class="top-nav__link" href="#why-us" rel="m_PageScroll2id">почему мы</a></li>
-						<li class="top-nav__item"><a class="top-nav__link" href="#portfolio" rel="m_PageScroll2id">портфолио</a></li>
+						<li class="top-nav__item"><a class="top-nav__link" href="#portfolio" rel="m_PageScroll2id">кейсы</a></li>
 					</ul>
 
 					<a class="top-nav__logo" href="#">
@@ -88,7 +88,7 @@
 					</a>
 
 					<ul class="top-nav__list">
-						<li class="top-nav__item"><a class="top-nav__link" href="#testimonials" rel="m_PageScroll2id">ОТЗЫВЫ</a></li>
+						<li class="top-nav__item"><a class="top-nav__link" href="#testimonials" rel="m_PageScroll2id">клиенты</a></li>
 						<li class="top-nav__item"><a class="top-nav__link" href="#pricing" rel="m_PageScroll2id">цены</a></li>
 						<li class="top-nav__item"><a class="top-nav__link" href="#contacts" rel="m_PageScroll2id">контакты</a></li>
 					</ul>
@@ -721,7 +721,7 @@
 					<div class="portfolio-slide" data-title="МАЗ">
 
 						<div class="portfolio-slide__img  portfolio-slide__img--macbook">
-							<img src="img/portfolio/4.png" alt="SEO MAZ-UA Macbook">
+							<img src="img/portfolio/1.png" alt="Google поиск MAЗ-ЮА">
 						</div>
 
 					</div>
@@ -731,7 +731,7 @@
 					<div class="portfolio-slide" data-title="Мойдодыр">
 
 						<div class="portfolio-slide__img  portfolio-slide__img--macbook">
-							<img src="img/portfolio/5.png" alt="SEO Мойдодыр Macbook">
+							<img src="img/portfolio/2.png" alt="Google поиск МОЙДОДЫР">
 						</div>
 
 					</div>
@@ -741,7 +741,7 @@
 					<div class="portfolio-slide" data-title="Оптимакс">
 
 						<div class="portfolio-slide__img  portfolio-slide__img--macbook">
-							<img src="img/portfolio/6.png" alt="SEO Optimax Macbook">
+							<img src="img/portfolio/3.png" alt="Google поиск OPTIMAX">
 						</div>
 
 					</div>
@@ -750,16 +750,8 @@
 					<!-- Portfolio slide #4 -->
 					<div class="portfolio-slide" data-title="Подарки">
 
-						<div class="portfolio-slide__img  portfolio-slide__img--imac">
-							<img src="img/portfolio/1-mac.png" alt="Подарки Imac">
-						</div>
-
-						<div class="portfolio-slide__img  portfolio-slide__img--ipad">
-							<img src="img/portfolio/1-ipad.png" alt="Подарки Ipad">
-						</div>
-
-						<div class="portfolio-slide__img  portfolio-slide__img--iphone">
-							<img src="img/portfolio/1-iphone.png" alt="Подарки Iphone">
+						<div class="portfolio-slide__img">
+							<img src="img/portfolio/4.png" alt="Разработка сайта ПОДАРКИ">
 						</div>
 
 					</div>
@@ -768,16 +760,8 @@
 					<!-- Portfolio slide #5 -->
 					<div class="portfolio-slide" data-title="Кофе">
 
-						<div class="portfolio-slide__img  portfolio-slide__img--imac">
-							<img src="img/portfolio/2-mac.png" alt="Кофе Imac">
-						</div>
-
-						<div class="portfolio-slide__img  portfolio-slide__img--ipad">
-							<img src="img/portfolio/2-ipad.png" alt="Кофе Ipad">
-						</div>
-
-						<div class="portfolio-slide__img  portfolio-slide__img--iphone">
-							<img src="img/portfolio/2-iphone.png" alt="Кофе Iphone">
+						<div class="portfolio-slide__img">
+							<img src="img/portfolio/5.png" alt="Разработка сайта КОФЕ">
 						</div>
 
 					</div>
@@ -786,16 +770,8 @@
 					<!-- Portfolio slide #6 -->
 					<div class="portfolio-slide" data-title="Треннинг">
 
-						<div class="portfolio-slide__img  portfolio-slide__img--imac">
-							<img src="img/portfolio/3-mac.png" alt="Тренинг Imac">
-						</div>
-
-						<div class="portfolio-slide__img  portfolio-slide__img--ipad">
-							<img src="img/portfolio/3-ipad.png" alt="Тренинг Ipad">
-						</div>
-
-						<div class="portfolio-slide__img  portfolio-slide__img--iphone">
-							<img src="img/portfolio/3-iphone.png" alt="Тренинг Iphone">
+						<div class="portfolio-slide__img">
+							<img src="img/portfolio/6.png" alt="Разработка сайта ТРЕННИНГ">
 						</div>
 
 					</div>
@@ -810,10 +786,10 @@
 					<!-- Portfolio slide #1 -->
 					<div class="m-portfolio-slide">
 						<div class="m-portfolio-slide__title">
-							<span>Подарки</span>
+							<span>Маз</span>
 						</div>
 						<div class="m-portfolio-slide__img">
-							<img src="img/portfolio/mobile/1.png" alt="Подарки">
+							<img src="img/portfolio/mobile/1.png" alt="Google поиск МАЗ">
 						</div>
 					</div>
 					<!--/. Portfolio slide #1 -->
@@ -821,10 +797,10 @@
 					<!-- Portfolio slide #2 -->
 					<div class="m-portfolio-slide">
 						<div class="m-portfolio-slide__title">
-							<span>CoffeShop</span>
+							<span>Мойдодыр</span>
 						</div>
 						<div class="m-portfolio-slide__img">
-							<img src="img/portfolio/mobile/2.png" alt="CoffeShop">
+							<img src="img/portfolio/mobile/2.png" alt="Google поиск МОЙДОДЫР">
 						</div>
 					</div>
 					<!--/. Portfolio slide #2 -->
@@ -832,13 +808,46 @@
 					<!-- Portfolio slide #3 -->
 					<div class="m-portfolio-slide">
 						<div class="m-portfolio-slide__title">
-							<span>Треннинг</span>
+							<span>Оптимакс</span>
 						</div>
 						<div class="m-portfolio-slide__img">
-							<img src="img/portfolio/mobile/3.png" alt="Треннинг">
+							<img src="img/portfolio/mobile/3.png" alt="Google поиск ОПТИМАКС">
 						</div>
 					</div>
 					<!--/. Portfolio slide #3 -->
+
+					<!-- Portfolio slide #4 -->
+					<div class="m-portfolio-slide">
+						<div class="m-portfolio-slide__title">
+							<span>Подарки</span>
+						</div>
+						<div class="m-portfolio-slide__img">
+							<img src="img/portfolio/mobile/4.png" alt="Разработка сайта ПОДАРКИ">
+						</div>
+					</div>
+					<!--/. Portfolio slide #4 -->
+
+					<!-- Portfolio slide #5 -->
+					<div class="m-portfolio-slide">
+						<div class="m-portfolio-slide__title">
+							<span>Кофе</span>
+						</div>
+						<div class="m-portfolio-slide__img">
+							<img src="img/portfolio/mobile/5.png" alt="Разработка сайта КОФЕ">
+						</div>
+					</div>
+					<!--/. Portfolio slide #5 -->
+
+					<!-- Portfolio slide #6 -->
+					<div class="m-portfolio-slide">
+						<div class="m-portfolio-slide__title">
+							<span>Треннинг</span>
+						</div>
+						<div class="m-portfolio-slide__img">
+							<img src="img/portfolio/mobile/6.png" alt="Разработка сайта ТРЕННИНГ">
+						</div>
+					</div>
+					<!--/. Portfolio slide #6 -->
 
 				</div>
 				<!--/. Mobile version -->
@@ -849,7 +858,7 @@
 		<!-- SECTION "TESTIMONIALS" -->
 		<section class="sect-testimonials" id="testimonials">
 			<div class="container">
-				<h2 class="sect-testimonials__title">наши клиенты</h2>
+				<h2 class="sect-testimonials__title"><span>наши</span> клиенты</h2>
 
 				<div class="testimonials-list" id="testimonialSlider">
 
